--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react-redux": "^3.0.1",
     "react-router": "1.0.0-rc1",
     "redux": "^3.0.2",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^1.0.0",
+    "immutable": "^3.7.6",
+    "react-progress-2": "^4.1.1",
+    "react-spinkit": "^1.1.4"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
@@ -27,8 +30,7 @@
     "webpack-dev-server": "^1.9.0"
   },
   "scripts": {
-    "clean": "rm -rf dist",
-    "build": "npm run clean && webpack",
+    "build": "webpack",
     "start": "npm run build && node server.js"
   }
 }
