--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "license": "MIT",
   "dependencies": {
     "history": "^1.9.0",
+    "immutable": "^3.7.6",
     "isomorphic-fetch": "^2.1.1",
     "react": "^0.14.0-rc1",
     "react-dom": "^0.14.3",
+    "react-progress-2": "^4.1.1",
     "react-redux": "^3.0.1",
     "react-router": "1.0.0-rc1",
+    "react-spinkit": "^1.1.4",
     "redux": "^3.0.2",
-    "redux-thunk": "^1.0.0",
-    "immutable": "^3.7.6",
-    "react-progress-2": "^4.1.1",
-    "react-spinkit": "^1.1.4"
+    "redux-thunk": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
