--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router": "1.0.0-rc1",
     "react-spinkit": "^1.1.4",
     "redux": "^3.0.2",
+    "redux-form": "^4.1.4",
     "redux-thunk": "^1.0.0"
   },
   "devDependencies": {
